1.2.15pre2: 2004-07-xx
	- Slovak translation (Radovan Stas)
	- fix activation from gnome-2.6 panel to properly raise window
	- fix transparency support (caused crashes in xchat...)

1.2.15pre1: 2004-06-27
	- fix ppp applet isdn online status
	- fix focusing new+maximized windows
	- fix some alt+tab pref combinations (hidden + all/group workspaces)
	- some more gcc 3.4 fixes (morfic)

1.2.14: 2004-05-22
	- minor tweak to alt+tab behavior when selecting from all 
	  workspaces

1.2.14pre16: 2004-05-09
	- netwm modal state broken, disabled
	- make menu/config file parsing behave more like sh (handle both
          single and double quotes) -- Eduard Bloch
	- Italian translation update
	- Czech translation update
	- fix build with gcc-3.4

1.2.14pre15: 2004-05-02
	- add new theme yellowmotif (Andreas Leitgeb (avl42))
	- fix in window mapping code for Citrix client
	- bug fixes in xft clipping

1.2.14pre14: 2004-04-20
	- Solaris fixes to configure.in (Damjan Perenic)
	- implement EWMH "modal" state
	- show themable preferences in ~/.icewm/preferences
	- fix order in CPU Status (Hanspeter Roth)

1.2.14pre13: 2004-04-12
	- fix antialiasing of menu icons
	- fix raising of new window when in fullscreen
	- Linux Kernel 2.6 iowait,irq,softirq cpu status 
          support (Hanspeter Roth)
	- improved support for NetWM hints (state: above, below, ...)
	- fix delayed mouse focus with fast keyboard desktop switches

1.2.14pre12: 2004-03-21
	- fixed icon antialiasing with IMLIB
	- fix crash with XPM icon loading
	- Solaris fixes (Damjan Perenic)
	
1.2.14pre11: 2004-03-16
	- minor bug fixes and build fixes

1.2.14pre10: 2004-02-29
	- fix comile with --enable-lite
	- CPUStatus fix for FreeBSD 5.2 / gcc 3.3.3  (Hanspeter Roth)
	- fix crash in CPU status (L10N related, translations need 
          to be updated)
	- made ShowMenuButtonIcon setting themable again
	- KeyWinMaximizeHoriz binding (no default key yet)
	- Italian translation update (Yuri Bongiorno)